src/components/HGNSkillsDashboard/SkillsProfilePage/styles/Skills.module.css
.skills {
  width: 30%;
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.skills h3 {
  color: #3ea0cb;
  font-size: 20px;
  margin-bottom: 5px;
}

.skills button {
  background-color: #d0d0d0;
  border: none;
  border-radius: 10px;
  margin-bottom: 5px;
  padding: 10px 15px;
  font-size: 16px;
  cursor: pointer;
  color: #333;
  text-align: left;
  max-width: 100%; /* Prevent overflow */
  box-sizing: border-box; /* Include padding in width */
}

.skills button:hover {
  background-color: #a9b7be;
}

.skills button.selected {
  color: #168dc0;
}

@media (width <= 768px) {
  .skills {
    width: 100%;
    flex-direction: column;
    align-items: center;
  }

  .skills button {
    width: 100%;
    max-width: 80%;
    font-size: 14px;
  }
}

:global(.dark-mode) .skills h3 {
  color: #fff;
}

:global(.dark-mode) .skills button {
  background-color: #333;
  color: #fff;
}

:global(.dark-mode) .skills button:hover {
  background-color: #444;
}

:global(.dark-mode) .skills button.selected {
  color: #8ab4f8;
}

